<resources>
    <string name="app_name">AlmacenSoft</string>
    <string name="subtitle_ip">Para que el aplicativo funcione correctamente, debe asegurarse de usar la IP correcta</string>
    <string name="ip_actual">IP Actual</string>
    <string name="ip_default">http://172.16.3.11/</string>
    <string name="escanear">ESCANEAR</string>
    <string name="config_ip">Configuración de IP</string>
    <string name="config">Configuración</string>
    <string name="menu_principal">Menu Principal</string>
    <string name="label_no">No</string>
    <string name="label_yes">Si</string>
    <string name="label_ok">OK</string>
    <string name="title_activity_general2">GeneralActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="recopilando">Recopilando datos…</string>
    <string name="procesando">Procesando…</string>
    <string name="procesando_solicitud">Procesando solicitud…</string>
    <string name="imprimiendo">Imprimiendo...</string>
    <string name="verificando_licencia">Verificando licencia…</string>
    <string name="verificando_ubicacion">Verificando Ubicación</string>
    <string name="cancelando_documento">Cancelando documento...</string>
    <string name="cerrando_documento">Cerrando documento…</string>
    <string name="verificando_datos">Verificando datos…</string>
    <string name="creando_documento">Creando documento</string>
    <string name="limpiando_bd">Limpiando base de datos…</string>
    <string name="recepcion_tilde">Recepción</string>
    <string name="despacho">Despacho</string>
    <string name="inventario">Inventario</string>
    <string name="configuracion">Configuración</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="lecturas">Lecturas</string>
    <string name="diferencial">Diferencial</string>
    <string name="seleccione_almacen">Seleccione almacén</string>
    <string name="dispositivos_disponibles">Dispositivos disponibles:</string>
    <string name="habilitar_bluetooth_utilizar_impresora">Debe habilitar el bluetooth para utilizar la impresora</string>
    <string name="habilitar_bluetooth">Habilitar Bluetooth</string>
    <string name="no_puede_imprimir">No se puede imprimir</string>
    <string name="dispositivo_no_bluetooth">Este dispositivo no cuenta con Bluetooth</string>
    <string name="no_dispositivos_sincronizados">No se encontraron dispositivos sincronizados</string>
    <string name="actualizar">Actualizar</string>
    <string name="configuracion_manual">Configuracion manual</string>
    <string name="usuario_minus">Usuario</string>
    <string name="contrasena_minus">Contraseña</string>
    <string name="app_version">V.2019.06.12.16.52</string>
    <string name="ok">OK</string>
    <string name="seleccion_almacen">Selección de almacén</string>
    <string name="modo_trabajo">Modo de Trabajo</string>
    <string name="en_linea">En línea</string>
    <string name="batch">Batch</string>
    <string name="modo_conteo">Modo de Conteo</string>
    <string name="manual">Manual</string>
    <string name="barrido">Barrido</string>
    <string name="habilitar_lote">Habilitar lote</string>
    <string name="habilitar_serie">Habilitar serie</string>
    <string name="habilitar_escaner">Habilitar escaner con cámara</string>
    <string name="establecer_ubicaciones">ESTABLECER UBICACIONES</string>
    <string name="ultima_limpieza_bd">Ultima limpieza de BD:</string>
    <string name="solicitar_impresion_etiquetas">Solicitar impresión de etiquetas</string>
    <string name="tipo_impresora">Tipo de Impresora</string>
    <string name="red">Red</string>
    <string name="id_impresion">ID Impresión</string>
    <string name="impresion_registros">Controlar impresión de registros:</string>
    <string name="por_lectura">Por lectura</string>
    <string name="por_detalle">Por detalle</string>
    <string name="datos_imprimir">DATOS IMPRIMIR EN ETIQUETA</string>
    <string name="lote">Lote</string>
    <string name="serie">Serie</string>
    <string name="tipo_doc">Tipo Doc:</string>
    <string name="n_documento">N° Documento</string>
    <string name="n_guia">N° Guia:</string>
    <string name="copia_impresion_message">Ingrese el número de documento y seleccione el número de guia</string>
    <string name="reintentar">REINTENTAR</string>
    <string name="desmarcar">Desmarcar</string>
    <string name="todos">Todos</string>
    <string name="limite_intentos">Limite de intentos</string>
    <string name="no_pudo_imprimir">No se pudo imprimir las etiquetas</string>
    <string name="error_WS">Error de conexión de WS</string>
    <string name="movil_sin_conexion">Error de conexión. Verifique que la conexión por Wi-fi esté activada</string>
    <string name="licenciado">Equipo licenciado</string>
    <string name="no_licenciado">Equipo no licenciado</string>
    <string name="no_mas_licencias">No cuenta con más licencias</string>
    <string name="ingresar_ambos_campos">Debe ingresar ambos campos</string>
    <string name="producto_diferencial">Producto diferencial</string>
    <string name="no_lecturas_criterio">No hay lecturas para ese criterio de búsqueda</string>
    <string name="debe_ingresar_valor">Debe ingresar un valor de búsqueda</string>
    <string name="alerta">Alerta</string>
    <string name="documento_ya_existe">El número de documento ya existe</string>
    <string name="no_pudo_registro">No se pudo realizar registro</string>
    <string name="validar_maestro_productos">Validar contra maestro de productos</string>
    <string name="codigo_producto">Código Producto</string>
    <string name="descripcion_producto">Descripción Producto</string>
    <string name="filtrar">Filtrar por:</string>
    <string name="ubicacion">Ubicación</string>
    <string name="producto">Producto</string>
    <string name="realice_busqueda">Realice una búsqueda</string>
    <string name="criterio">Criterio</string>
    <string name="valor">Valor</string>
    <string name="buscar">Buscar</string>
    <string name="conteo">Conteo</string>
    <string name="cantidad">Cantidad</string>
    <string name="documento_dos_puntos">Documento:</string>
    <string name="guia_dos_puntos">GUIA:</string>
    <string name="producto_dos_puntos">PRODUCTO:</string>
    <string name="ubicacion_dos_puntos">UBIC.:</string>
    <string name="lote_mayus">LOTE</string>
    <string name="serie_mayus">SERIE</string>
    <string name="cantidad_dos_puntos">Cant.:</string>
    <string name="seleccion_tipo_documento">Selección de tipo de documento</string>
    <string name="almacen">Almacén:</string>
    <string name="no_documentos_pendientes">No existen documentos pendientes</string>
    <string name="no_lecturas_documento">No hay lecturas para este documento</string>
    <string name="configuracion_autogeneracion">CONFIGURACION DE AUTOGENERACION</string>
    <string name="todo_documento">Todo el documento</string>
    <string name="solo_numero">Solo el número</string>
    <string name="no_tipos_documento">No hay tipos de documento disponibles</string>
    <string name="cantidad_pendiente">Q.P.</string>
    <string name="cantidad_requerida">Q.R.</string>
    <string name="cantidad_atendida">Q.A.</string>
    <string name="n_serie">N° Serie:</string>
    <string name="codigo">Código</string>
    <string name="descripcion">Descripción</string>
    <string name="ubicacion_dos_puntos_minus">Ubicación:</string>
    <string name="lote_dos_puntos_minus">Lote:</string>
    <string name="eliminar">Eliminar</string>
    <string name="serie_dos_puntos_minus">Serie:</string>
    <string name="no_clases_disponibles">No hay clases disponibles, deben ser ingresadas desde el módulo PC</string>
    <string name="documentos_pendientes">Documentos Pendientes</string>
    <string name="seleccionar_documento_modo_batch">Se debe seleccionar al menos un documento para poder trabajar en modo Batch</string>
    <string name="retornar_seleccion">¿Retornar a selección?</string>
    <string name="recepcion_mayus">RECEPCION</string>
    <string name="despacho_mayus">DESPACHO</string>
    <string name="cargar_datos_limpiar_BD">¿Desea cargar los datos trabajados antes de limpiar la base de datos?</string>
    <string name="dias_limpieza">7 días</string>
    <string name="ubicacion_verificada">Ubicación verificada</string>
    <string name="ubicacion_invalida">Ubicación invalida</string>
    <string name="impresion_bluetooth_batch">Solo impresión bluetooth en modo Batch</string>
    <string name="seleccionar_impresora">Debe seleccionar una impresora</string>
    <string name="habilitar_bluetooth_impresoras_disponibles">Debe habilitar el bluetooth para ver las impresoras disponibles</string>
    <string name="impresora_bluetooth">Impresora bluetooth</string>
    <string name="seguro_almacen">Seguro que desea utilizar el almacén:</string>
    <string name="debe_seleccionar_impresora">Debe seleccionar una impresora bluetooth</string>
    <string name="no_selecciona_impresora">Si no selecciona una impresora, deberá regresar a la pantalla de configuraciones</string>
    <string name="no_datos_eliminar">No hay datos para eliminar en la base de datos</string>
    <string name="bd_limpiada">Base de datos limpiada</string>
    <string name="no_dias">0 días 0 horas</string>
    <string name="creado">Creado con exito</string>
    <string name="modificado">Modificado con exito</string>
    <string name="documento_no_guias_cerradas">El documento no contiene guias cerradas</string>
    <string name="n_guia_select">--N° Guia--</string>
    <string name="no_detalle_documento">No hay detalle para este documento</string>
    <string name="error_impresion">Error de impresión:</string>
    <string name="revisar_impresora">Revise que la impresora esté prendida y que su adaptador bluetooth esté activado</string>
    <string name="seleccionar_elemento">Debe seleccionar un elemento de a lista</string>
    <string name="seleccionar_impresora_configuracion">Debe seleccionar la impresora desde el menú de configuración</string>
    <string name="impresion_realizada">Impresión realizada</string>
    <string name="copia_documento">COPIA DOCUMENTO</string>
    <string name="etiqueta_libre">ETIQUETA LIBRE</string>
    <string name="encender_adaptador_bluetooth">Debe encender el adaptador de bluetooth o se imprimirá en red</string>
    <string name="encender_adaptador_pregunta">¿Desea encender el adaptador bluetooth?</string>
    <string name="no_diferenciales">No hay diferenciales</string>
    <string name="operacion_realizada">Operacion correcta</string>
    <string name="lectura_registrada">Lectura registrada</string>
    <string name="eliminar_lecturas_inventario">¿Desea eliminar todas las lecturas del inventario?</string>
    <string name="eliminar_grupo_lectura_pregunta">¿Desea eliminar todo el grupo de lecturas?</string>
    <string name="lecturas_eliminadas">Lecturas eliminadas</string>
    <string name="error_get_inventario">Error al obtener inventario</string>
    <string name="proceso_ok">Proceso Ok</string>
    <string name="no_pudo_eliminar_lectura">No se pudo eliminar la lectura</string>
    <string name="no_pudo_eliminar_grupo_lecturas">No se pudo eliminar el grupo de lecturas</string>
    <string name="proceso_correcto">Proceso correcto</string>
    <string name="no_pudo_eliminar_total_lecturas">No se pudo eliminar el total de lecturas</string>
    <string name="campo_obligatorio">Campo obligatorio</string>
    <string name="debe_ingresar_cantidad">Debe ingresar la cantidad</string>
    <string name="ubicacion_no_existe">Ubicación no existe</string>
    <string name="formato_maximo">Formato máximo 000.00</string>
    <string name="maximo_cifras">Máximo 3 cifras</string>
    <string name="registrando_lectura">Registrando lectura...</string>
</resources>