<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin_default">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AppTheme.Card"
        android:orientation="vertical"
        android:layout_marginBottom="16dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/solicitar_impresion_etiquetas"
        style="@style/menu_item_text"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_default"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/label_no"
                style="@style/menu_item_option"/>

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/impresora_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_marginStart="@dimen/margin_small" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_yes"
                style="@style/menu_item_option"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tipo_impresora"
            style="@style/menu_item_text"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_default"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/red"
                style="@style/menu_item_option"/>

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/tipo_impresora_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_marginStart="@dimen/margin_small" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bluetooth"
                style="@style/menu_item_option"/>

        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/impresion_textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginRight="@dimen/margin_xsmall"
            android:hint="@string/id_impresion"
            android:orientation="vertical"
            app:hintAnimationEnabled="true"
            android:layout_marginBottom="16dp">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/impresion_registros"
            style="@style/menu_item_text"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/por_lectura"
                style="@style/menu_item_option"/>

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/registros_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_marginStart="@dimen/margin_small" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/por_detalle"
                style="@style/menu_item_option"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AppTheme.Card"
        android:orientation="vertical"
        android:layout_marginBottom="16dp"
        android:visibility="gone"> <!--  Solo se agrega por solicitud del Sr. Benito -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/datos_imprimir"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            style="@style/menu_item_header"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lote"
            style="@style/menu_item_text"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_default"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/label_no"
                style="@style/menu_item_option"/>

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/lote_impresion_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_marginStart="@dimen/margin_small" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_yes"
                style="@style/menu_item_option"/>

        </LinearLayout>

        <TextView
            android:id="@+id/serie_label_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/serie"
            style="@style/menu_item_text"/>

        <LinearLayout
            android:id="@+id/serie_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/label_no"
                style="@style/menu_item_option"/>

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/serie_impresion_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_small"
                android:layout_marginStart="@dimen/margin_small" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_yes"
                style="@style/menu_item_option"/>

        </LinearLayout>

    </LinearLayout>

    </LinearLayout>

</ScrollView>