<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
    style="@style/AppTheme.Card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:orientation="vertical"
    android:layout_centerInParent="true"
    android:focusableInTouchMode="true"
    android:descendantFocusability="beforeDescendants">

    <TextView
        style="@style/menu_item_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:text="@string/configuracion_autogeneracion" />

    <TextView
        style="@style/menu_item_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todo_documento" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_default"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/label_no"
            android:textColor="@color/textColorPrimaryConfig" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/todo_documento_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_yes"
            android:textColor="@color/textColorPrimaryConfig" />

    </LinearLayout>

    <TextView
        style="@style/menu_item_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/solo_numero" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/label_no"
            android:textColor="@color/textColorPrimaryConfig" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/solo_numero_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/label_yes"
            android:textColor="@color/textColorPrimaryConfig" />

    </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seleccion_tipo_documento"
            style="@style/menu_item_text"
            android:layout_marginBottom="8dp"/>

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/sin_documento_spinner"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:dropDownVerticalOffset="24dp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/message_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_tipos_documento"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/red"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"
            android:visibility="gone"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/nro_documento_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/n_documento"
            android:orientation="vertical"
            app:hintAnimationEnabled="true"
            android:layout_marginBottom="8dp"
            android:visibility="gone">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:singleLine="true"
                android:maxLength="20"/>

        </android.support.design.widget.TextInputLayout>


    <ImageView
        android:id="@+id/crear_image_view"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/ic_confirmacion"
        android:tint="@color/colorPrimary"
        android:layout_gravity="right" />


    </LinearLayout>

</RelativeLayout>


